--- a/ecommerce/WebApplication1/Views/Shared/AdminLayout.cshtml
+++ b/ecommerce/WebApplication1/Views/Shared/AdminLayout.cshtml
@@ -350,6 +350,7 @@
     <script src="~/NiceAdmin/assets/vendor/simple-datatables/simple-datatables.js"></script>
     <script src="~/NiceAdmin/assets/vendor/tinymce/tinymce.min.js"></script>
     <script src="~/NiceAdmin/assets/vendor/php-email-form/validate.js"></script>
+    <script src="~/Scripts/bootbox.min.js"></script>
 
     <!-- Template Main JS File -->
     <script src="~/NiceAdmin/assets/js/main.js"></script>
