--- a/ecommerce/WebApplication1/Views/AdminCategory/Create.cshtml
+++ b/ecommerce/WebApplication1/Views/AdminCategory/Create.cshtml
@@ -21,7 +21,7 @@
                 <div class="form-group">
                     <label>Açıklama</label>
                     <input type="text" class="form-control" name="Description" />
-                    @Html.ValidationMessageFor(x => x.Name, "", new { @style = "color:red" })
+                    @Html.ValidationMessageFor(x => x.Description, "", new { @style = "color:red" })
                 </div>
                 <br />
                 <button class="btn btn-primary" type="submit">Onayla</button>
