--- a/ecommerce/WebApplication1/Views/AdminProduct/Update.cshtml
+++ b/ecommerce/WebApplication1/Views/AdminProduct/Update.cshtml
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-md-6">
             <form method="post" enctype="multipart/form-data">
-                @Html.AntiForgeryToken()
+                @*@Html.AntiForgeryToken()*@
 
                 <div class="form-group">
                     <label>Ad</label>
