--- a/ecommerce/WebApplication1/Views/Home/Index.cshtml
+++ b/ecommerce/WebApplication1/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                     <div class="carousel-inner">
                         <div class="item active">
                             <div class="col-sm-6">
-                                <h1><span>E</span>-e-commerce</h1>
+                                <h1>>e-commerce</h1>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                                 <button type="button" class="btn btn-default get">Get it now</button>
                             </div>
