--- a/ecommerce/WebApplication1/Views/Category/Details.cshtml
+++ b/ecommerce/WebApplication1/Views/Category/Details.cshtml
@@ -78,7 +78,7 @@
                                 <div class="single-products">
                                     <div class="productinfo text-center">
 
-                                        <a href="/Product/Details/@item.Id"><img src="~/Content/Image/@item.Image" width="65" height="110" alt="" /></a>
+                                        <a href="/Product/Details/@item.Id"><img src="~/Content/Image/@item.Image" tyle="object-fit:cover;" width="200" height="200" /></a>
                                         <h2>@item.Price</h2>
                                         <p>@item.Name</p>
                                         <a href="/Product/Details/@item.Id" class="btn btn-default add-to-cart">Ürün Detay</a>
