--- a/ecommerce/WebApplication1/Views/Home/Index.cshtml
+++ b/ecommerce/WebApplication1/Views/Home/Index.cshtml
@@ -102,7 +102,7 @@
 
                 </div><!--features_items-->
 
-                @Html.Action("PopularProduct", "Product")
+                @Html.Action("FeaturedProduct", "Product")
 
             </div>
         </div>
