--- a/ecommerce/WebApplication1/Views/Category/Details.cshtml
+++ b/ecommerce/WebApplication1/Views/Category/Details.cshtml
@@ -90,7 +90,7 @@
                         </div>
                     }
                 </div>
-                @Html.Action("PopularProduct", "Product")
+                @Html.Action("FeaturedProduct", "Product")
             </div>
         </div>
     </div>
