--- a/ecommerce/WebApplication1/Views/Product/Details.cshtml
+++ b/ecommerce/WebApplication1/Views/Product/Details.cshtml
@@ -64,7 +64,6 @@
                                 </span>
                                 <p><b>Kategori:</b> @Model.Category.Name</p>
                                 <p><b>Stok:</b> @Model.Stock</p>
-                                <p><b>Popüler:</b> @Model.Popular</p>
                                 <p><b>Onay:</b> @Model.isApproved</p>
                                 <p><b>Açıklama:</b> @Model.Description</p>
                                 <a href=""><img src="images/product-details/share.png" class="share img-responsive" alt="" /></a>
@@ -97,7 +96,7 @@
                     </div>
                    
 
-            @Html.Action("PopularProduct","Product")
+            @Html.Action("FeaturedProduct","Product")
 
                 </div>
             </div>
