--- a/ecommerce/WebApplication1/Views/Product/FeaturedProduct.cshtml
+++ b/ecommerce/WebApplication1/Views/Product/FeaturedProduct.cshtml
@@ -1,11 +1,11 @@
 ﻿<div class="recommended_items">
     <!--recommended_items-->
-    <h2 class="title text-center">Popüler Ürünler</h2>
+    <h2 class="title text-center">Öne Çıkan Ürünler</h2>
 
     <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="item active">
-                @foreach (var item in ViewBag.popular)
+                @foreach (var item in ViewBag.featured)
                 {
                     <div class="col-sm-4">
                         <div class="product-image-wrapper">
@@ -26,7 +26,7 @@
 
             </div>
             <div class="item">
-                @foreach (var item in ViewBag.popular)
+                @foreach (var item in ViewBag.featured)
                 {
                     <div class="col-sm-4">
                         <div class="product-image-wrapper">
