--- a/ecommerce/WebApplication1/Views/Shared/Layout.cshtml
+++ b/ecommerce/WebApplication1/Views/Shared/Layout.cshtml
@@ -67,23 +67,23 @@
                     <div class="col-md-8 clearfix">
                         <div class="shop-menu clearfix pull-right">
                             <ul class="nav navbar-nav">
-                                @*@if (User.Identity.IsAuthenticated)
-                                {*@
+                                @if (User.Identity.IsAuthenticated)
+                                {
 
-                                    <li><a href=""><i class="fa fa-user"></i> @*@Session["Ad"] @Session["Soyad"]*@</a></li>
+                                    <li><a href=""><i class="fa fa-user"></i> @Session["Ad"] @Session["Soyad"]</a></li>
 
 
                                     <li><a href="/Account/LogOut"><i class="fa fa-lock"></i> Çıkış Yap</a></li>
-                                @*}
+                                }
 
                                 else
-                                {*@
+                                {
                                     <li><a href="/Account/Login"><i class="fa fa-lock"></i> Giriş Yap</a></li>
                                 }
-                                @*@if (User.IsInRole("Admin"))
-                                {*@
+                                @if (User.IsInRole("Admin"))
+                                {
                                     <li><a href="/Admin/Index"><i class="fa fa-lock"></i> Admin Paneli</a></li>
-                                @*}*@
+                                }
                                 <li><a href="/Home/Index"> Anasayfa</a></li>
 
 
