--- a/ecommerce/WebApplication1/Views/Shared/AdminLayout.cshtml
+++ b/ecommerce/WebApplication1/Views/Shared/AdminLayout.cshtml
@@ -287,6 +287,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link " href="/AdminFeatured/Index">
+                    <i class="bi bi-grid"></i>
+                    <span>Öne Çıkan Ürünler</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link " href="/AdminProduct/CriticalStock">
                     <i class="bi bi-grid"></i>
                     <span>Kritik Stok</span>
