--- a/ecommerce/WebApplication1/Views/Category/Details.cshtml
+++ b/ecommerce/WebApplication1/Views/Category/Details.cshtml
@@ -77,15 +77,14 @@
                             <div class="product-image-wrapper">
                                 <div class="single-products">
                                     <div class="productinfo text-center">
-
-                                        <a href="/Product/Details/@item.Id"><img src="~/Content/Image/@item.Image" tyle="object-fit:cover;" width="200" height="200" /></a>
+                                        <a href="/Product/Details/@item.Id">
+                                            <img src="~/Content/Image/@item.Image" style="object-fit:cover;" width="200" height="200" alt="" />
+                                        </a>
                                         <h2>@item.Price</h2>
                                         <p>@item.Name</p>
                                         <a href="/Product/Details/@item.Id" class="btn btn-default add-to-cart">Ürün Detay</a>
                                     </div>
-
                                 </div>
-
                             </div>
                         </div>
                     }
