--- a/ecommerce/WebApplication1/Views/AdminProduct/Update.cshtml
+++ b/ecommerce/WebApplication1/Views/AdminProduct/Update.cshtml
@@ -34,13 +34,8 @@
                 </div>
                 <br />
                 <div class="form-group">
-                    <label>Stok</label>
-                    <input type="text" class="form-control" name="Stock" value="@Model.Stock" />
-                </div>
-                <br />
-                <div class="form-group">
                     <label>Onay</label>
-                    @Html.EditorFor(x => x.isApproved)
+                    @Html.EditorFor(x => x.IsApproved)
                 </div>
                 <br />
                 <div class="form-group">
