--- a/ecommerce/WebApplication1/Views/Product/Details.cshtml
+++ b/ecommerce/WebApplication1/Views/Product/Details.cshtml
@@ -53,8 +53,7 @@
                                             </a>
                                         </span>
                                         <p><b>Kategori:</b> @Model.Category.Name</p>
-                                        <p><b>Stok:</b> @Model.Stock</p>
-                                        <p><b>Onay:</b> @Model.isApproved</p>
+                                        <p><b>Onay:</b> @Model.IsApproved</p>
                                         <p><b>Açıklama:</b> @Model.Description</p>
                                         <a href=""><img src="images/product-details/share.png" class="share img-responsive" alt="" /></a>
                                     </div>
