--- a/ecommerce/WebApplication1/Views/Shared/AdminLayout.cshtml
+++ b/ecommerce/WebApplication1/Views/Shared/AdminLayout.cshtml
@@ -316,6 +316,12 @@
                     <span>İstatistikler</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link " href="/Admin/Comment">
+                    <i class="bi bi-grid"></i>
+                    <span>Yorumlar</span>
+                </a>
+            </li>
         </ul>
 
     </aside><!-- End Sidebar-->
