--- a/ecommerce/WebApplication1/Views/AdminFeatured/Index.cshtml
+++ b/ecommerce/WebApplication1/Views/AdminFeatured/Index.cshtml
@@ -23,7 +23,6 @@
         <th>Ad</th>
         <th>Açıklama</th>
         <th>Fiyat</th>
-        <th>Stok</th>
         <th>Onay</th>
         <th>Resim</th>
         <th>Kategori</th>
@@ -35,9 +34,8 @@
             <td>@item.Name</td>
             <td>@item.Description</td>
             <td>@item.Price</td>
-            <td>@item.Stock</td>
             <td align="center">
-                @if (item.isApproved == true)
+                @if (item.IsApproved == true)
                 {<input type="checkbox" class="big-checkbox" checked onclick="return false;" onkeydown="return false;" />}
                 else
                 {<input type="checkbox" onclick="return false;" onkeydown="return false;" />}
