--- a/ecommerce/WebApplication1/Views/Shared/AdminLayout.cshtml
+++ b/ecommerce/WebApplication1/Views/Shared/AdminLayout.cshtml
@@ -293,6 +293,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link " href="/AdminProductStock/Index">
+                    <i class="bi bi-grid"></i>
+                    <span>Stok</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link " href="/AdminProduct/CriticalStock">
                     <i class="bi bi-grid"></i>
                     <span>Kritik Stok</span>
@@ -356,7 +362,6 @@
 
     <!-- Vendor JS Files -->
     <script src="~/NiceAdmin/assets/vendor/apexcharts/apexcharts.min.js"></script>
-    <script src="~/NiceAdmin/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="~/NiceAdmin/assets/vendor/chart.js/chart.umd.js"></script>
     <script src="~/NiceAdmin/assets/vendor/echarts/echarts.min.js"></script>
     <script src="~/NiceAdmin/assets/vendor/quill/quill.js"></script>
@@ -364,6 +369,10 @@
     <script src="~/NiceAdmin/assets/vendor/tinymce/tinymce.min.js"></script>
     <script src="~/NiceAdmin/assets/vendor/php-email-form/validate.js"></script>
     <script src="~/Scripts/bootbox.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Template Main JS File -->
     <script src="~/NiceAdmin/assets/js/main.js"></script>
